# nibble

./: .env.example  .gitignore  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  whitelist_vulture.py
.github/workflows/: ci.yml
api/: index.html
architecture/: index.html
argocd/: application.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: api.md
docs/how-to/: arrival-predictions.md  monitoring-headways.md  publishing-gtfs-rt-to-s3.md  trip-assignment-corrections.md
docs/reference/: adapters.md  config.md  emitter.md  gtfs.md  interpolator.md  models.md  normalizers.md  poller.md  reconciler.md  server.md  state.md
how-to/arrival-predictions/: index.html
how-to/monitoring-headways/: index.html
how-to/publishing-gtfs-rt-to-s3/: index.html
how-to/trip-assignment-corrections/: index.html
nibble/: auth.py  config.py  departure.py  emitter.py  headways.py  interpolator.py  models.py  overrides.py  poller.py  predictions.py  reconciler.py  server.py  state.py  unknown_routes.py
nibble/adapters/: __init__.py  base.py  gtfs_rt.py  mwrta.py  mylirr.py  passio.py  routematch.py  swiv.py  trillium.py  vta.py
nibble/adapters/data/: mart_routes.json
nibble/gtfs/: feed_info.py  fixer.py  publisher.py  realtime.py  static.py
nibble/normalizer/: base.py  brta.py  ccrta.py  cttransit.py  default.py  mta_railroad.py  mwrta.py  nyct.py  passio.py  ripta.py  swiv.py  vta.py  wrta.py
nibble/protos/: gtfs_realtime_pb2.py  gtfs_realtime_pb2.pyi
nibble/publishers/: trip_updates.py  vehicle_positions.py
protos/: gtfs-realtime.proto
protos/mtarr/: gtfs-realtime-MTARR.proto
protos/nyct/: nyct-subway.proto
reference/adapters/: index.html
reference/config/: index.html
reference/emitter/: index.html
reference/gtfs/: index.html
reference/interpolator/: index.html
reference/models/: index.html
reference/normalizers/: index.html
reference/poller/: index.html
reference/reconciler/: index.html
reference/server/: index.html
reference/state/: index.html
scripts/: create-secrets.sh  generate-gobble-routes.sh  migrate-gobble-configmaps.sh
search/: search_index.json
tests/: test_auth.py  test_brta_normalizer.py  test_cttransit_normalizer.py  test_departure.py  test_emitter.py  test_feed_info.py  test_fetch_feed.py  test_fixer.py  test_headways.py  test_interpolator.py  test_mwrta_adapter.py  test_mwrta_normalizer.py  test_normalizer.py  test_nyct_normalizer.py  test_overrides.py  test_parse_feed.py  test_passio_adapter.py  test_poll_loop.py  test_predictions.py  test_publisher.py  test_reconciler.py  test_routematch_adapter.py  test_state.py  test_static.py  test_swiv_adapter.py  test_trillium_adapter.py  test_trip_updates_publisher.py  test_unknown_routes.py  test_vehicle_positions_publisher.py  test_vta_adapter.py  test_vta_normalizer.py
tests/integration/: conftest.py  test_broadcaster.py  test_normalizations.py  test_pipeline.py  test_server.py
(+4 files in other folders)
