[project]
name = "nibble"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "starlette>=0.40",
    "sse-starlette>=2.1",
    "uvicorn>=0.30",
    "pydantic-settings>=2.3",
    "gtfs-realtime-bindings>=1.0",
    "protobuf>=4.25",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "moto[s3]>=5.0",
    "boto3>=1.34",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py311"
