[project]
name = "nibble"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "sse-starlette>=2.1",
    "uvicorn>=0.30",
    "pydantic-settings>=2.3",
    "gtfs-realtime-bindings>=1.0",
    "protobuf>=4.25",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]

[project.scripts]
nibble = "nibble.server:main"
nibble-openapi = "nibble.server:print_openapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "moto[s3]>=5.0",
    "boto3>=1.34",
    "vulture>=2.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py312"
