[project]
name = "nibble"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "sse-starlette>=2.1",
    "uvicorn>=0.30",
    "pydantic-settings>=2.3",
    "protobuf>=4.25",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]

[project.scripts]
nibble = "nibble.server:main"
nibble-openapi = "nibble.server:print_openapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "grpcio-tools>=1.62",
    "mypy-protobuf>=3.6",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "moto[s3]>=5.0",
    "boto3>=1.34",
    "vulture>=2.15",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=nibble --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.per-file-ignores]
"whitelist_vulture.py" = ["F821"]
